Add minimized SBT subproject and snapshots task
Step 5 of the Gradle → SBT migration. Adds the `minimized` subproject
that compiles a small set of Kotlin/Java fixtures with the assembled
`semanticdb-kotlinc` plugin attached to kotlinc and javac, producing
*.semanticdb files used to regenerate the golden snapshots.

- New `minimized` subproject pointing at semanticdb-kotlinc/minimized:
  - kotlincOptions appends `-Xplugin=<predicted assembly path>` and the
    sourceroot/targetroot `-P` flags
  - javacOptions appends a single combined string
    `-Xplugin:semanticdb -sourceroot:... -targetroot:...` (preserves the
    Gradle behavior — the javac plugin parses its own arg string)
  - semanticdb-javac added as a Provided dependency
  - javac is forked (`javaHome := Some(...current JVM...)`) and given
    `-J--add-exports` flags for jdk.compiler internals. Two reasons:
    (1) JDK 9+ encapsulates internals semanticdb-javac touches reflectively;
    (2) sbt's in-process javac sends `vf://` virtual-file URIs that the
    plugin can't resolve via Path.of — forked javac sees real paths
  - Compile/compile dependsOn kotlinc/Compile/packageBin so the assembled
    fat-jar exists before kotlinc runs

- New top-level `snapshots` taskKey runs com.sourcegraph.scip_kotlin.SnapshotKt
  in a forked JVM via ForkRun, with sourceroot/targetroot/snapshotDir passed
  as -D system properties (Snapshot.kt reads them via System.getProperty).
  CLI args mirror Gradle: kotlinSrcDir, javaSrcDir.

- V.semanticdbJavac = "0.8.23" added to the version object.

Existing kotlinc and snapshotsRunner subprojects are untouched.